cors and docs fix
