# user_manage/src/routes/userRoutes.ts
@@ -22,8 +22,8 @@ router.get('/tables', getTables);
 router.post('/add', addUser);
 router.delete('/:username', deleteUser);
 
-router.post('/login', login);
-router.get('/logout', (req, res) => {
+router.post('/auth/login', login);
+router.get('/auth/logout', (req, res) => {
     res.clearCookie('authToken', { httpOnly: true, secure: true });
     res.status(200).json({ message: 'Logged out successfully' });
 });
